[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/Enemy3/Enemy3.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Enemy1/HellBat.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 9.0

[sub_resource type="Animation" id=2]

resource_name = "RayRotation"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RayCast2D:cast_to")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -50, 50 ), Vector2( -50, -50 ) ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 9.0

[node name="Enemy3" type="RigidBody2D"]

position = Vector2( 1088, 576 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 6, 4, 16, 16 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

scale = Vector2( 4, 4 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="BurstTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 14.0
one_shot = false
autostart = true

[node name="BulletTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.15
one_shot = false
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = "RayRotation"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/RayRotation = SubResource( 2 )
blend_times = [  ]

[node name="RayCast2D" type="RayCast2D" parent="." index="5"]

enabled = false
exclude_parent = true
cast_to = Vector2( -50, -34.2345 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Enemy3Area2D" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy3Area2D" index="0"]

scale = Vector2( 4, 4 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]

[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]

[connection signal="area_entered" from="Enemy3Area2D" to="." method="_on_Enemy3Area2D_area_entered"]


